tdf#123873 DOCX IMPORT: fix unhandled textwrap for objects

The OLE objects (in this case charts) had bad wrap option setting
and this lead to misplaced objects. Now this parameter is set
according to the file.

Change-Id: I506be91b6801f0ffc3942e514f81119d895fdcb8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/88091
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>